installation de firebase analytics,ajouter pharmacie de garde dans la recherchre, et placer dans la 1eme page

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -96,17 +96,10 @@
 <ion-slide>
 		<ion-col col-12>
 
-		<button  (click)="onDisplayByCategory('cath14',lat,lng)"
-					        clear class="color-back-trans icon-proximite-1">
-			<ion-icon name="custom-flower" class="icon-flower">F</ion-icon>
-		    <p class="categorie" >Fleuriste</p>
-	    </button>
-
-
-        <button  (click)="onDisplayByCategory('cath6',lat,lng)"
-					        clear class="color-back-trans icon-proximite-1">
-			<ion-icon name="custom-coffee" class="icon-coffee">C</ion-icon>
-		    <p class="categorie" >Café, bar</p>
+		<button  (click)="onDisplayByCategory('cath19',lat,lng)"
+					        clear class="color-back-trans icon-proximite-2">
+			<ion-icon name="custom-hotel" class='icon-hotel'>H</ion-icon>
+		    <p class="categorie" >Hôtel</p>
 	    </button>
 
   	    <button  (click)="onDisplayByCategory('cath13',lat,lng)"
@@ -114,7 +107,11 @@
 			<ion-icon name="custom-gas-station" class="icon-gas-station">E</ion-icon>
 		    <p class="categorie" >Essence</p>
 	   </button>
-
+	    <button  (click)="onDisplayByCategory('cath14',lat,lng)"
+					        clear class="color-back-trans icon-proximite-1">
+			<ion-icon name="custom-flower" class="icon-flower">F</ion-icon>
+		    <p class="categorie" >Fleuriste</p>
+	    </button>
 	    </ion-col>
 	</ion-slide>
 
@@ -124,11 +121,13 @@
 			<ion-col col-4>
 
     	<ion-col col-12>
-		<button  (click)="onDisplayByCategory('cath19',lat,lng)"
-					        clear class="color-back-trans icon-proximite-2">
-			<ion-icon name="custom-hotel" >H</ion-icon>
-		    <p class="categorie" >Hôtel</p>
-	    </button></ion-col>
+
+	    <button  (click)="onDisplayByCategory('cath6',lat,lng)"
+					        clear class="color-back-trans icon-proximite-1">
+			<ion-icon name="custom-coffee" class="icon-coffee">C</ion-icon>
+		    <p class="categorie" >Café, bar</p>
+	    </button>
+	    </ion-col>
 	    <ion-col col-4>
         <button  (click)="onDisplayByCategory('cath17',lat,lng)"
     					        clear class="color-back-trans icon-proximite-2">
