v 7.0.3, ajout alert pour location,ajout de service diagnostic,completer firebase dans toutes les pages, ajout pharmacie de garde a proximité,

--- a/src/pages/autour-moi/autour-moi.html
+++ b/src/pages/autour-moi/autour-moi.html
@@ -26,6 +26,7 @@
           <span class="ville">{{l.d[3].ville}}{{l.d[4].ville}}{{l.d[5].ville}}</span>
         </div>
          <div class="distance" >Distance: 
+          <span >{{l.d[8].distance}}</span>
       		<span >{{l.d[9].distance}}</span>
       		<span >{{l.d[10].distance}}</span>
       		<span *ngIf="l.d.length>11">{{l.d[11].distance}}</span>
