--- a/src/pages/search-jaune/single-pro/single-pro.html
+++ b/src/pages/search-jaune/single-pro/single-pro.html
@@ -2,7 +2,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{rs_comp}}<br> {{ville0}}{{ville1}} {{ville2}} {{ville3}}</ion-title>
+    <ion-title text-wrap>{{rs_comp}}<br> {{ville0}}{{ville1}} {{ville2}} {{ville3}}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -57,7 +57,7 @@
       <ion-col col-12>
 
         <!-- raison sociale -->
-        <ion-item class="rasion-sociale">
+        <ion-item class="rasion-sociale" text-wrap>
           <span class="rs_comp">{{rs_comp}}</span>
         </ion-item>
 
