--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -70,7 +70,7 @@
 
   <ion-slide>
     <ion-col col-12>
-		<button  (click)="onDisplayPharmacieGarde(list_ville,lat,lng)"
+		<button  (click)="onDisplayPharmacieGardeAproximite('Pharmacie de garde',    lat,lng)"
 					        clear class="color-back-trans">
 			<ion-icon name="custom-phar-garde" class="icon-pharmacie-garde">ph</ion-icon>
 		    <p class="categorie" >Pharmacie <br> de garde</p>
