installation dans ios

--- a/src/pages/search-jaune/search-jaune.html
+++ b/src/pages/search-jaune/search-jaune.html
@@ -62,7 +62,9 @@
         <div *ngIf="l.d.length>12">
         <span *ngIf="l.d[12].rubrique">{{l.d[12].rubrique}}<br></span>
         </div>
-
+        <div *ngIf="l.d.length>13">
+        <span *ngIf="l.d[12].rubrique">{{l.d[13].rubrique}}<br></span>
+        </div>
        </div>
      </ion-col>
     </ion-row>
