installation dans le nouveau mac

--- a/src/pages/search-jaune/single-pro/single-pro.html
+++ b/src/pages/search-jaune/single-pro/single-pro.html
@@ -270,7 +270,7 @@
         </ion-list>
       </ion-col>
     </ion-row>
-<button (click)="addAvis(code_firme)"> Ajouter un avis</button>
+<!--<button (click)="addAvis(code_firme)"> Ajouter un avis</button>-->
 
   </ion-grid>
 
