--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <!--<ion-grid>
     <ion-row>
       <ion-col>
         <p class="message">Laissez-nous un message</p>
@@ -128,5 +128,5 @@
         </ion-list>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
 </ion-content>
