star-rating, avis

--- a/src/pages/add-avis/add-avis.html
+++ b/src/pages/add-avis/add-avis.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the AddAvisPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -35,11 +30,17 @@
                 <input name="note" type="radio" class="star" value="4" />
                 <input name="note" type="radio" class="star" value="5" />
             </div>
+                    	<div id="results_container">
+            
+            	
+
+			</div>
+
 		</ion-col>
 		<ion-col col-12 class="" >
 			<div class="evaluation">Votre avis</div>
 		</ion-col>
-		<ion-col>
+		<ion-col col-12>
 			<ion-list>
 	          <ion-item>
 	           <ion-label color="primary" floating>Email <span class="asterisk">*</span></ion-label>
@@ -47,7 +48,7 @@
 	          </ion-item>
 	        </ion-list>
 		</ion-col>
-		<ion-col>
+		<ion-col col-12>
 			<ion-list>
 	          <ion-item>
 	           <ion-label color="primary" floating>Titre du commentaire <span class="asterisk">*</span></ion-label>
@@ -55,10 +56,10 @@
 	          </ion-item>
 	        </ion-list>
 		</ion-col>
-		<ion-col>
+		<ion-col col-12>
 			<ion-list>
 	          <ion-item>
-	           <ion-label color="primary" floating>Commentaire <span class="asterisk">*</span></ion-label>
+	           <ion-label color="primary" floating>Commentaire </ion-label>
 	           <ion-textarea ></ion-textarea>
 	          </ion-item>
 	        </ion-list>
